<resources>
    <string name="app_name">Homework7and8</string>
    <string name="city_item_text">City</string>
    <string name="cities_activity_title">Choose the city</string>
    <string name="city_example">Minsk, NN</string>
    <string name="example_date">15 dec 2020</string>
    <string name="weather_image">Weather Image</string>
    <string name="example_date2">15.12.2020</string>
    <string name="sunny">Snow</string>
    <string name="add_city">add_city</string>
    <string name="underscore_image">underscore_image</string>
    <string name="done_image">done_image</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="dialog_title">Please put the city name</string>
    <string name="dialog_hint">City name</string>
    <string name="offline">Offline</string>
    <string name="example_tmp">-8</string>


</resources>