<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/offline"
        android:textColor="@color/grey"
        android:textColorHint="@color/purple_700"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/currentCity"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/city_example"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/example_date"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mainAddButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/ic_cancel_24px_outlined"
        android:contentDescription="@string/weather_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentCity" />

    <View
        android:id="@+id/cloud"
        android:layout_width="108dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="92dp"
        android:background="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todaysTemp"
        android:layout_width="91dp"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/example_tmp"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloud"
        app:lineHeight="32dp" />

    <TextView
        android:id="@+id/today_sunny"
        android:layout_width="35dp"
        android:layout_height="21dp"
        android:text="@string/sunny"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/todaysTemp"
        app:layout_constraintStart_toStartOf="@+id/todaysTemp"
        app:layout_constraintTop_toBottomOf="@+id/todaysTemp" />

    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="150dp"
        android:divider="@drawable/separtor"
        android:dividerPadding="3dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_sunny">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecast_recycler"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:orientation="horizontal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>